--- a/.github/workflows/build-watchface.yml
+++ b/.github/workflows/build-watchface.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          distribution: adopt
+          distribution: 'temurin'
           java-version: '11'
 
       - name: Download Connect IQ SDK 6.3.0
@@ -33,7 +33,7 @@ jobs:
             -o SHARINGAN.PR3
 
       - name: Upload PR3 artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4  # ← NAJWAŻNIEJSZA ZMIANA!
         with:
           name: SHARINGAN-watchface
           path: SHARINGAN.PR3
