--- a/.github/workflows/build-watchface.yml
+++ b/.github/workflows/build-watchface.yml
@@ -17,14 +17,14 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      - name: Download Connect IQ SDK 6.3.0
+      - name: Download Connect IQ SDK 8.2.2
         run: |
-          wget https://download.garmin.com/connectiq/SDK/connectiq-sdk-6.3.0.zip
-          unzip connectiq-sdk-6.3.0.zip -d ciq-sdk
+          wget https://download.garmin.com/connectiq/SDK/connectiq-sdk-8.2.2.zip
+          unzip connectiq-sdk-8.2.2.zip -d ciq-sdk
 
       - name: Build Watchface
         run: |
-          export CIQ_SDK=ciq-sdk/connectiq-sdk-6.3.0
+          export CIQ_SDK=ciq-sdk/connectiq-sdk-8.2.2
           $CIQ_SDK/bin/monkeyc \
             -d fenix5 \
             -m manifest.xml \
@@ -33,7 +33,7 @@ jobs:
             -o SHARINGAN.PR3
 
       - name: Upload PR3 artifact
-        uses: actions/upload-artifact@v4  # ← NAJWAŻNIEJSZA ZMIANA!
+        uses: actions/upload-artifact@v4
         with:
           name: SHARINGAN-watchface
           path: SHARINGAN.PR3
